added calendar route, updates swagger docs
