# swagger.json
@@ -119,6 +119,63 @@
                         "format": "full-date"
                     }
                 }
+            },
+            "calendarDay": {
+                "type": "object",
+                "properties": {
+                    "date": {
+                        "type": "string",
+                        "format": "date"
+                    },
+                    "lessons": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/lesson"
+                        }
+                    }
+                }
+            },
+            "lesson": {
+                "type": "object",
+                "properties": {
+                    "hour": {
+                        "type": "number"
+                    },
+                    "startTime": {
+                        "type": "string",
+                        "format": "time"
+                    },
+                    "endTime": {
+                        "type": "string",
+                        "format": "time"
+                    },
+                    "subject": {
+                        "type": "string"
+                    },
+                    "teachers": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "contents": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "type": {
+                                    "type": "string"
+                                },
+                                "description": {
+                                    "type": "string"
+                                },
+                                "isCritical": {
+                                    "type": "boolean"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "securitySchemes": {
@@ -190,6 +247,51 @@
                         "description": "Digreg not connected"
                     }
                 }
+            }
+        },
+        "/digreg/calendar/{dates}": {
+            "get": {
+                "tags": [
+                    "digreg"
+                ],
+                "summary": "Get calendar for the logged in user",
+                "description": "Get calendar for the logged in user",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/calendarDay"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not logged in"
+                    },
+                    "403": {
+                        "description": "Digreg not connected"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "dates",
+                        "in": "path",
+                        "description": "Dates to get calendar for",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string",
+                                "format": "date"
+                            }
+                        }
+                    }
+                ]
             }
         },
         "/timer": {
